--- a/public/views/book.html
+++ b/public/views/book.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,900;1,900&display=swap" rel="stylesheet">
@@ -52,7 +52,7 @@
     <div id="wraper" class="wraper-main">
         <div class="section row-section no-m-bot book-section">
             <div class="row">
-                <img src="./img/last.jpg" alt="" width="200px" class="image-big">
+                <img src="../img/last.jpg" alt="" width="200px" class="image-big">
             </div>
             <div class="row column-section">
                 <h1>Zemsta</h1>
