--- a/public/views/main.html
+++ b/public/views/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="public/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,900;1,900&display=swap" rel="stylesheet">
@@ -71,7 +71,7 @@
         </div>
         <div id="results">
             <div class="card">
-                <img src="/img/pexels-suzy-hazelwood-1130980.jpg" />
+                <img src="public/img/pexels-suzy-hazelwood-1130980.jpg" />
                 <h3 class="card-padding">Zemsta</h3>
                 <p class="card-padding">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et</p>
                 <div class="buttons card-padding">
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="/img/pexels-suzy-hazelwood-1130980.jpg" />
+                <img src="public/img/pexels-suzy-hazelwood-1130980.jpg" />
                 <h3 class="card-padding">Zemsta</h3>
                 <p class="card-padding">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et</p>
                 <div class="buttons card-padding">
@@ -89,7 +89,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="/img/pexels-suzy-hazelwood-1130980.jpg" />
+                <img src="public/img/pexels-suzy-hazelwood-1130980.jpg" />
                 <h3 class="card-padding">Zemsta</h3>
                 <p class="card-padding">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et</p>
                 <div class="buttons card-padding">
@@ -98,7 +98,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="/img/pexels-suzy-hazelwood-1130980.jpg" />
+                <img src="public/img/pexels-suzy-hazelwood-1130980.jpg" />
                 <h3 class="card-padding">Zemsta</h3>
                 <p class="card-padding">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et</p>
                 <div class="buttons card-padding">
