--- a/public/css/style.css
+++ b/public/css/style.css
@@ -144,13 +144,13 @@ body {
     font-size: 57px;
 }
 .info-section {
-    font-size: 36px;
+    font-size: 2rem;
 }
 .image-big {
     vertical-align: middle;
     display: inline-block;
-    height: 600px;
-    width: 600px;
+    height: 40vw;
+    width: 40vw;
     object-fit: cover;
 }
 
@@ -245,7 +245,8 @@ form {
     flex-direction: column;
     align-items: center;
     padding-top: auto;
-    padding: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
     position: fixed;
     background-color: white;
 }
@@ -292,7 +293,7 @@ form {
     font-weight: lighter;
 }
 .wraper-main {
-    width: 1400px;
+    margin-right: 10vw;
 }
 #results {
     display: flex;
@@ -300,6 +301,7 @@ form {
     overflow-y: scroll;
     flex-wrap: wrap;
     height: 76.6vh;
+    width: 100%;
 }
 #results .card {
     flex-basis: 21%;
@@ -336,5 +338,72 @@ form {
 .book-section img {
     width: 400px;
     height: 400px;
-    
+}
+
+@media screen and (max-width: 800px){
+    .row-section {
+        flex-direction: column;
+    }
+    .dn800 {
+        display: none;
+    }
+
+    .nav-rail {
+        /* border-style: solid; */
+        height: 60px;
+        position: fixed;
+        bottom: 19vh;
+        width: 100vw;
+        margin-top: auto;
+        margin-bottom: 0;
+        flex-direction: row;
+        align-content: center;
+        align-items: center;
+    }
+    .nav-rail-container {
+        display: flex;
+        width: 100%;
+        height: 100%;
+    }
+    .nav-helper {
+        width: 100%;
+    }
+    .nav-item {
+        /* border-style: solid; */
+        width: 100%;
+        height: 60px;
+        vertical-align: middle;
+    }
+    .nav-list {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .nav-list li {
+        width: 100%;
+        list-style: none;
+        padding: 10px 0;
+        text-align: center;
+    }
+    .nav-text {
+        display: none;
+    }
+    /*.nav-helper {*/
+    /*    display: table-cell;*/
+    /*    vertical-align: middle;*/
+    /*}*/
+    #wraper {
+        max-width: 100%;
+        width: 100%;
+    }
+    #results .card {
+        flex-basis: 100%;
+    }
+    #searchBar {
+        width: 90%;
+    }
+    .search-button {
+        width: 100%;
+    }
 }
